01-newbie/social-proof-section/style.css
@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap');

/* primary */

:root {
  --very-dark-magenta: hsl(300, 43%, 22%);
  --soft-pink: hsl(333, 80%, 67%);

  /* neutral */

  --dark-grayish-magenta: hsl(303, 10%, 53%);
  --light-grayish-magenta: hsl(300, 24%, 96%);
  --white: hsl(0, 0%, 100%);

  --font-size: 15px;
}
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  border: none;
  list-style: none;
  box-sizing: border-box;
}

.sr-only {
  position: absolute !important;
  width: 1px !important;
  height: 1px !important;
  padding: 0 !important;
  border: 0 !important;
  margin: 1px !important;
  overflow: hidden !important;
  clip: rect(0, 0, 0, 0) !important;
  white-space: nowrap !important;
}

body {
  min-height: 100vh;
  font-family: 'League Spartan', sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-image: url('./images/bg-pattern-top-desktop.svg'),
    url('./images/bg-pattern-bottom-desktop.svg');
  background-repeat: no-repeat;
  background-size: 40.5% 45%, 75% 84%;
  background-position: top left, bottom right;
  font-size: var(--font-size);
}

.container {
  width: 85em;
  height: 46em;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  transition: all 0.5s ease-in-out;
}

.social__advert {
  padding-top: 1rem;
}
.social__ratings {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1rem;
  transition: all 0.5s ease-in-out;
}
.social__reviews {
  grid-column: span 2;
  display: flex;
  gap: 2rem;
  margin-top: 2rem;
  transition: all 0.5s ease-in-out;
}

.social__advert--heading {
  color: var(--very-dark-magenta);
  font-size: 3.2rem;
  font-weight: 700;
  margin-right: 9rem;
  margin-bottom: 1.5rem;
}
.social__advert--text {
  color: var(--dark-grayish-magenta);
  font-size: 1.2rem;
  line-height: 1.5rem;
  margin-right: 10rem;
}

.ratings__card {
  width: 29rem;
  background-color: var(--light-grayish-magenta);
  color: var(--very-dark-magenta);
  display: flex;
  align-items: center;
  gap: 2rem;
  font-weight: bold;
  font-size: 1.1rem;
  padding: 1.3rem 2rem;
  border-radius: 0.5rem;
  transition: all 0.5s ease-in-out;
}
.ratings__card--stars img {
  width: 1.15rem;
  height: 1rem;
  margin: 0 0.1rem;
}
.ratings__card:nth-child(1) {
  align-self: flex-start;
}
.ratings__card:nth-child(2) {
  align-self: center;
}
.ratings__card:nth-child(3) {
  align-self: flex-end;
}

.review__card {
  background-color: var(--very-dark-magenta);
  border-radius: 0.5rem;
  padding: 0.5rem 1rem;
  transition: all 0.5s ease-in-out;
}
.review__card:nth-child(1) {
  align-self: flex-start;
}
.review__card:nth-child(2) {
  align-self: center;
}
.review__card:nth-child(3) {
  align-self: flex-end;
}

.review__card--profile {
  display: flex;
  align-items: center;
  gap: 1.3rem;
  margin: 1.6rem 1rem;
}
.review__card--image {
  border-radius: 50%;
  width: 2.5rem;
  height: 2.5rem;
  background-color: var(--very-dark-magenta);
}
.review__card--user {
  gap: 0.4rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 1.1rem;
}
.review__card--name {
  color: var(--white);
  font-weight: 700;
}
.review__card--verified {
  color: var(--soft-pink);
  font-weight: 400;
}
.review__card--text {
  color: var(--light-grayish-magenta);
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5rem;
  display: block;
  margin: 1.6rem 1rem;
}
.review__card--text::before {
  content: open-quote;
  padding-right: 0.3rem;
}
.review__card--text::after {
  content: close-quote;
  padding-left: 0.3rem;
}

.attribution {
  position: absolute;
  bottom: 0;
  margin: 1rem 0;
  font-size: 1.2rem;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
  text-decoration: none;
}

@media only screen and (max-width: 1155px) {
  .attribution {
    display: none;
  }
}
@media only screen and (max-width: 1045px) {
  .social__reviews {
    gap: 1rem;
  }
}

@media only screen and (max-height: 800px) {
  .attribution {
    display: none;
  }
}

@media only screen and (max-width: 80rem) {
  .container {
    width: 95%;
  }
  .social__ratings .ratings__card {
    align-self: stretch;
    margin: 0;
  }
  .social__reviews .review__card {
    align-self: stretch;
  }
}

@media only screen and (max-width: 60rem) {
  body {
    background-image: url('./images/bg-pattern-top-mobile.svg'),
      url('./images/bg-pattern-bottom-mobile.svg');
    background-repeat: no-repeat;
    background-size: 100%, 100%;
    background-position: top center, bottom center;
  }
  .container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    padding: 5rem 2rem;
  }
  .social__advert {
    width: 100%;
    margin: 0;
    padding: 0;
  }
  .social__advert--heading {
    margin-right: 0;
    font-size: 2.5rem;
    font-weight: bold;
    text-align: center;
    line-height: 2.2rem;
  }
  .social__advert--text {
    margin: 0 -1rem 2rem -1rem;
    text-align: center;
    font-size: 1.2rem;
  }
  .ratings__card {
    align-self: stretch;
    flex-direction: column;
    gap: 1rem;
  }
  .social__reviews {
    flex-direction: column;
  }
  .review__card--text {
    display: block;
    margin: 1.6rem 0;
    font-size: 1rem;
    font-weight: 500;
  }
  .attribution {
    display: none;
  }
}

